--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
+<!DOCTYPE html>
 <html>
+<head>
+<meta charset="UTF-8">
+<title>THINKWEB</title>
+</head>
+
 <body>
 <h1>THINKWEB</h1>
 ทดสอบ ทดสอบ ทดสอบ
 </body>
+
 </html>
