--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ ev.target.appendChild(document.getElementById(data));
 
 <div id="div1" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
 <br>
-<img id="drag1" src="img_logo.gif" draggable="true" ondragstart="drag(event)" width="336" height="69">
+<img id="drag1" src="http://thinksoft.co.th/images/design_think/logo1.gif" draggable="true" ondragstart="drag(event)" width="336" height="69">
 
 </body>
 </html>
